--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -234,7 +234,7 @@ set(CPACK_COMPONENT_APPLICATIONS_DEPENDS Libraries Data)
 set(CPACK_COMPONENT_LIBRARIES_REQUIRED 1)
 
 set(CPACK_RPM_PACKAGE_REQUIRES 
-	"cmake >= 2.8, root-physics, root, tcsh, postgresql-devel, boost-devel >= 1.45, boost-filesystem, gcc-c++ >= 4.6, netcdf-devel, netcdf-cxx-devel, netcdf-cxx4-devel, hdf5-devel, libpqxx-devel, pcl-devel"
+	"cmake >= 2.8, tcsh, boost-devel >= 1.45, boost-filesystem, gcc-c++ >= 4.7, ryan-vtk-5-10, ryan-pcl-1-6, ryan-qhull-2011, ryan-debug, ryan-serialization"
 	)
 
 set(CPACK_DEBIAN_PACKAGE_DEPENDS
