git-svn-id: file:///mnt/svn/ryan-debug@19 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ SET( ENV_MOD_DIR_PREFIX
 )
 set(MODULES_FILENAME
 	Ryan_Debug
+	CACHE STRING
+	"Name of module file"
 )
 
 set(INSTALL_CMAKE_DIR ${DEF_INSTALL_CMAKE_DIR} CACHE PATH
