Compiles and deploys properly. Need to enable CMake package stuff.
git-svn-id: file:///mnt/svn/rtmath@994 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -234,7 +234,7 @@ set(CPACK_COMPONENT_APPLICATIONS_DEPENDS Libraries Data)
 set(CPACK_COMPONENT_LIBRARIES_REQUIRED 1)
 
 set(CPACK_RPM_PACKAGE_REQUIRES 
-	"cmake >= 2.8, tcsh, boost-devel >= 1.45, boost-filesystem, gcc-c++ >= 4.7, ryan-vtk-5-10, ryan-pcl-1-6, ryan-qhull-2011, ryan-debug, ryan-serialization"
+	"cmake >= 2.8, tcsh, boost-devel >= 1.45, boost-filesystem, gcc-c++ >= 4.7, ryan-vtk-5-10, ryan-pcl-1-6, ryan-qhull-2011, Ryan_Debug, Ryan_Serialization, Ryan_tmatrix"
 	)
 
 set(CPACK_DEBIAN_PACKAGE_DEPENDS
