remerged matrixop-head-merge branch. Need to remember to change the target on the Windows systems.
git-svn-id: file:///mnt/svn/rtmath@998 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -29,7 +29,7 @@ add_subdirectory (shape)
 #add_subdirectory (shape-combo)
 ##add_subdirectory (shape-rectprism)
 #add_subdirectory (shape-rosette)
-##add_subdirectory (shape-sector-snowflake)
+add_subdirectory (shape-sector-snowflake)
 ##add_subdirectory (stats-ddscat-combined-plots)
 add_subdirectory (tmatrix-oneellip)
 add_subdirectory (tmatrix-slice)
