git-svn-id: file:///mnt/svn/rtmath@999 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape-hexplate/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-hexplate/CMakeLists.txt
@@ -1,8 +1,17 @@
 include (common)
-set(rtmath-shape-sector-snowflake_LIBRARIES "")
-set(rtmath-shape-sector-snowflake_INCLUDE_DIRS "")
+find_package(Eigen3 REQUIRED)
+include_directories(${EIGEN3_INCLUDE_DIR})
 
-add_executable (rtmath-shape-sector-snowflake main.cpp)
+find_package(PCL REQUIRED COMPONENTS common io octree segmentation surface)
+include_directories(${PCL_INCLUDE_DIRS})
+link_directories(${PCL_LIBRARY_DIRS})
 
-addapp(rtmath-shape-sector-snowflake)
+add_executable (rtmath-shape-hexplate main.cpp)
+
+set_target_properties( rtmath-shape-hexplate PROPERTIES FOLDER "Apps")
+target_link_libraries(rtmath-shape-hexplate ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
+	${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_OCTREE_LIBRARIES} 
+	${PCL_SEGMENTATION_LIBRARIES} ${PCL_SURFACE_LIBRARIES})
+INSTALL(TARGETS rtmath-shape-hexplate RUNTIME DESTINATION bin COMPONENT Applications)
+
 
