--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory (rtmath-version)
 add_subdirectory (shape)
 ##add_subdirectory (shape-basicdata)
 #add_subdirectory (shape-combo)
+add_subdirectory (shape-hexplate)
 ##add_subdirectory (shape-rectprism)
 #add_subdirectory (shape-rosette)
 add_subdirectory (shape-sector-snowflake)
