shape-hexplate now implements relGraph class, which is based on the old shape code. It uses a dependency graph to determine all missing parameters. Still need to write a triangle-writing mechanism and also need to work in dipole spacings.
git-svn-id: file:///mnt/svn/rtmath@1001 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape-hexplate/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-hexplate/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(PCL REQUIRED COMPONENTS common io octree segmentation surface)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 
-add_executable (rtmath-shape-hexplate main.cpp)
+add_executable (rtmath-shape-hexplate main.cpp relGraph.cpp relGraph.h)
 
 set_target_properties( rtmath-shape-hexplate PROPERTIES FOLDER "Apps")
 target_link_libraries(rtmath-shape-hexplate ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat
