--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -15,6 +15,7 @@ add_subdirectory (ddscat-decimate)
 add_subdirectory (ddscat-generate-ellipsoid)
 #add_subdirectory (ddscat-genparams)
 ##add_subdirectory (ddscat-regenerate-shapes)
+add_subdirectory (ddscat-test)
 add_subdirectory (expand-shorthand)
 #add_subdirectory (garrett)
 add_subdirectory (getm)
